[build-system]
requires = ["hatchling==1.22.0", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "eprllib"
# La versión se obtiene dinámicamente del archivo version.py
dynamic = ["version", "dependencies"]
metadata = "2.2"
authors = [
  { name="Germán Rodolfo Henderson"},
]
description = "Building control trought DRL."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    { "from-file" = "requirements.txt" }
]
license = {file = "LICENSE"}

[project.urls]
"Documentation" = "https://hermmanhender.github.io/eprllib/"
"GitHub Repository" = "https://github.com/hermmanhender/eprllib"
"Bug Tracker" = "https://github.com/hermmanhender/eprllib/issues"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.version]
path = "src/eprllib/version.py"